# Semi-static_Objects_Navigation

./: 1  README.md  small_house.world
prompt_related/: guide_model_gpt.py  sam_client.py  sam_service.py  sam_service_second.py
py_graph/: package.xml  setup.cfg  setup.py
py_graph/py_graph/: graph.py  image_publish.py  image_to_video.py  pose_subscriber.py  record_virtual_tracking.py  route_plan.py  save_npy_to_2d.py  second_image_save.py  true_graph.py  velocity_publisher.py
ram_detect/: CMakeLists.txt  package.xml
ram_detect/launch/: my_launch_file.launch.py  second_guide.launch.py
ram_detect/src/: 2D_to3D.cpp  circle_draw.py  depth_info.cpp  depth_subscriber.cpp  detect_circle.cpp  image_viewer.cpp  keyframe_pose.cpp  object_3d_bounding_box.cpp  object_depth_detect.cpp  orb_diff.cpp  stereo_motion.cpp  true_2D_to3D.cpp  true_object_depth_detect_copy.cpp  virtual_point_to_tracking.cpp
ram_detect/src/deal_data-py/: classification.py  test-cor-class.py  visualize_3d_coordinates.py
