<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ram_detect</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lm@todo.todo">lm</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>rosbag2_cpp</build_depend>
  <build_depend>rosbag2_storage</build_depend>
  <buildtool_depend>launch</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>rosbag2_cpp</exec_depend>
  <exec_depend>rosbag2_storage</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
